<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e5e5e5"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >
        
    <LinearLayout
        android:id="@+id/layoutDatadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/viewDatadir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Data_dir" />

        <EditText
            android:id="@+id/textDatadir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSavedir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/viewSavedir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Save_dir" />

        <EditText
            android:id="@+id/textSavedir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLocale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/viewLocale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Locale" />

        <Spinner
            android:id="@+id/spinnerLocale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:entries="@array/locales"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/viewSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enable_sound" />

        <ToggleButton
            android:id="@+id/toggleSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/sound_enabled"
            android:textOff="@string/sound_disabled" />
    </LinearLayout>

        <LinearLayout
        android:id="@+id/layoutAutosave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/viewAutosave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enable_autosave" />

        <ToggleButton
            android:id="@+id/toggleAutosave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/autosave_enabled"
            android:textOff="@string/autosave_disabled" />
    </LinearLayout>
    
        <LinearLayout
        android:id="@+id/layoutStartblank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/viewStartblank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enable_startblank" />

        <ToggleButton
            android:id="@+id/toggleStartblank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/startblanktoggle_false"
            android:textOn="@string/startblanktoggle_true" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layoutSaveover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/viewSaveover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Save_approach" />
        
		<RadioGroup
			android:id="@+id/groupSaveover"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" 
        	android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioAsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Ask" />

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Replace" />

        <RadioButton
            android:id="@+id/radioNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/New" />
    	</RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/viewPrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Allow_printing" />

        <ToggleButton
            android:id="@+id/togglePrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/print_enabled"
	    android:textOff="@string/print_disabled" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPrintdelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/viewPrintdelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Print_delay" />

        <Spinner
            android:id="@+id/spinnerPrintdelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:entries="@array/printdelays"/>
    </LinearLayout>

        <LinearLayout
        android:id="@+id/layoutDisablescreensaver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/viewDisablescreensaver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Disable_screen_saver" />

        <ToggleButton
            android:id="@+id/toggleDisablescreensaver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/screensaver_disabled"
            android:textOff="@string/screensaver_enabled" />
    </LinearLayout>


</LinearLayout>
</ScrollView>
